// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateOpinion /> when the query is on desktop should render a FOR opinion 1`] = `
Array [
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL bnUGuG cap-card"
  >
    <div
      className="sc-bcXGCL bruSHA sc-fXqqsB gHWJqw cap-tag"
      title=""
    >
      <span
        className="sc-bcXGCL dRrWit cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="sc-bcXGCL eJeGvx"
    />
    <div
      className="sc-bcXGCL ldyaSm"
    >
      <div
        className="sc-bcXGCL cTCiLp"
      >
        <span
          className="UserAvatar__UserAvatarContainer-jxoNlw kVUpxv"
          hasBadge={false}
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <div
            className="sc-bcXGCL lgrbm sc-ckEbfr gOeGmr cap-avatar"
            title="Agui le penseur"
          >
            <img
              alt="Agui le penseur"
              className="sc-bcXGCL fHacA-d"
              src="<mock-value-for-field-\\"url\\">"
              style={
                Object {
                  "objectFit": "cover",
                }
              }
              title="Agui le penseur"
            />
          </div>
        </span>
        <div
          className="sc-bcXGCL cBwqzf"
        >
          <p
            className="sc-bcXGCL eGzOei cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="sc-bcXGCL llGRuW cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL diHJQS"
      >
        <h4
          className="sc-bcXGCL gcgTEP cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="sc-bcXGCL jMALnA cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`<DebateOpinion /> when the query is on desktop should render an AGAINST opinion 1`] = `
Array [
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL bnUGuG cap-card"
  >
    <div
      className="sc-bcXGCL bruSHA sc-fXqqsB gHWJqw cap-tag"
      title=""
    >
      <span
        className="sc-bcXGCL dRrWit cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="sc-bcXGCL eJeGvx"
    />
    <div
      className="sc-bcXGCL ldyaSm"
    >
      <div
        className="sc-bcXGCL cTCiLp"
      >
        <span
          className="UserAvatar__UserAvatarContainer-jxoNlw kVUpxv"
          hasBadge={false}
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <div
            className="sc-bcXGCL lgrbm sc-ckEbfr gOeGmr cap-avatar"
            title="Agui le penseur"
          >
            <img
              alt="Agui le penseur"
              className="sc-bcXGCL fHacA-d"
              src="<mock-value-for-field-\\"url\\">"
              style={
                Object {
                  "objectFit": "cover",
                }
              }
              title="Agui le penseur"
            />
          </div>
        </span>
        <div
          className="sc-bcXGCL cBwqzf"
        >
          <p
            className="sc-bcXGCL eGzOei cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="sc-bcXGCL llGRuW cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL diHJQS"
      >
        <h4
          className="sc-bcXGCL gcgTEP cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="sc-bcXGCL jMALnA cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`<DebateOpinion /> when the query is on desktop should render with a read more link 1`] = `
Array [
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL ktIMbs cap-card"
  >
    <div
      className="sc-bcXGCL bruSHA sc-fXqqsB gHWJqw cap-tag"
      title=""
    >
      <span
        className="sc-bcXGCL dRrWit cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="sc-bcXGCL ldyaSm"
    >
      <div
        className="sc-bcXGCL cTCiLp"
      >
        <span
          className="UserAvatar__UserAvatarContainer-jxoNlw kVUpxv"
          hasBadge={false}
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <div
            className="sc-bcXGCL lgrbm sc-ckEbfr gOeGmr cap-avatar"
            title="Agui le penseur"
          >
            <img
              alt="Agui le penseur"
              className="sc-bcXGCL fHacA-d"
              src="<mock-value-for-field-\\"url\\">"
              style={
                Object {
                  "objectFit": "cover",
                }
              }
              title="Agui le penseur"
            />
          </div>
        </span>
        <div
          className="sc-bcXGCL cBwqzf"
        >
          <p
            className="sc-bcXGCL eGzOei cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="sc-bcXGCL llGRuW cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL diHJQS"
      >
        <h4
          className="sc-bcXGCL gcgTEP cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="sc-bcXGCL jMALnA cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`<DebateOpinion /> when the query is on mobile should render a FOR opinion 1`] = `
Array [
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL bnUGuG cap-card"
  >
    <div
      className="sc-bcXGCL bruSHA sc-fXqqsB gHWJqw cap-tag"
      title=""
    >
      <span
        className="sc-bcXGCL dRrWit cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="sc-bcXGCL eJeGvx"
    />
    <div
      className="sc-bcXGCL ldyaSm"
    >
      <div
        className="sc-bcXGCL cTCiLp"
      >
        <span
          className="UserAvatar__UserAvatarContainer-jxoNlw kVUpxv"
          hasBadge={false}
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <div
            className="sc-bcXGCL lgrbm sc-ckEbfr gOeGmr cap-avatar"
            title="Agui le penseur"
          >
            <img
              alt="Agui le penseur"
              className="sc-bcXGCL fHacA-d"
              src="<mock-value-for-field-\\"url\\">"
              style={
                Object {
                  "objectFit": "cover",
                }
              }
              title="Agui le penseur"
            />
          </div>
        </span>
        <div
          className="sc-bcXGCL cBwqzf"
        >
          <p
            className="sc-bcXGCL eGzOei cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="sc-bcXGCL llGRuW cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL diHJQS"
      >
        <h4
          className="sc-bcXGCL gcgTEP cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="sc-bcXGCL jMALnA cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
        <button
          className="sc-bcXGCL sc-laZSpB cfdvRJ jHvBhg cap-button DebateOpinion___StyledButton-eaqExq bkrrPY"
          onClick={[Function]}
          type="button"
        >
          capco.module.read_more
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`<DebateOpinion /> when the query is on mobile should render with a read more link 1`] = `
Array [
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL ktIMbs cap-card"
  >
    <div
      className="sc-bcXGCL bruSHA sc-fXqqsB gHWJqw cap-tag"
      title=""
    >
      <span
        className="sc-bcXGCL dRrWit cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="sc-bcXGCL ldyaSm"
    >
      <div
        className="sc-bcXGCL cTCiLp"
      >
        <span
          className="UserAvatar__UserAvatarContainer-jxoNlw kVUpxv"
          hasBadge={false}
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <div
            className="sc-bcXGCL lgrbm sc-ckEbfr gOeGmr cap-avatar"
            title="Agui le penseur"
          >
            <img
              alt="Agui le penseur"
              className="sc-bcXGCL fHacA-d"
              src="<mock-value-for-field-\\"url\\">"
              style={
                Object {
                  "objectFit": "cover",
                }
              }
              title="Agui le penseur"
            />
          </div>
        </span>
        <div
          className="sc-bcXGCL cBwqzf"
        >
          <p
            className="sc-bcXGCL eGzOei cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="sc-bcXGCL llGRuW cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL diHJQS"
      >
        <h4
          className="sc-bcXGCL gcgTEP cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="sc-bcXGCL jMALnA cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
        <button
          className="sc-bcXGCL sc-laZSpB cfdvRJ jHvBhg cap-button DebateOpinion___StyledButton-eaqExq bkrrPY"
          onClick={[Function]}
          type="button"
        >
          capco.module.read_more
        </button>
      </div>
    </div>
  </div>,
]
`;
